--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <h2>About Me</h2>
             <div class="about-content">
                 <div class="about-text">
-                    <p>Write a brief introduction about yourself here.</p>
+                    <p>This is an example introduction about myself.</p>
                     <div class="skills">
                         <span class="skill-tag">HTML</span>
                         <span class="skill-tag">CSS</span>
