--- a/index.html
+++ b/index.html
@@ -30,16 +30,24 @@
             </div>
         </section>
 
-        <section id="about" class="about-section">
-            <h2>About Me</h2>
-            <div class="about-content">
-                <div class="about-text">
-                    <p>Write a brief introduction about yourself here.</p>
-                    <div class="skills">
-                        <span class="skill-tag">HTML</span>
-                        <span class="skill-tag">CSS</span>
-                        <span class="skill-tag">JavaScript</span>
-                        <!-- Add more skills as needed -->
+        <section id="about" class="education-section">
+            <h2>Education</h2>
+            <div class="education-content">
+                <div class="education-entry">
+                    <h3>Degree Name</h3>
+                    <p class="school-name">Johns Hopkins University</p>
+                    <p class="education-date">20201- 2025</p>
+                    <ul class="education-details">
+                        <li>Major: Your Major</li>
+                        <li>GPA: X.XX</li>
+                    </ul>
+                    <div class="relevant-courses">
+                        <h4>Relevant Coursework:</h4>
+                        <div class="course-tags">
+                            <span class="course-tag">Machine Learning</span>
+                            <span class="course-tag">Course 2</span>
+                            <span class="course-tag">Course 3</span>
+                        </div>
                     </div>
                 </div>
             </div>
