--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
+    <title>Will Shiber</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
@@ -11,7 +11,7 @@
 <body>
     <header>
         <nav>
-            <div class="logo">[YN]</div>
+            <div class="logo">[WS]</div>
             <ul>
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
@@ -25,7 +25,7 @@
         <section id="home" class="hero">
             <div class="hero-content">
                 <h1>Welcome to My Portfolio</h1>
-                <p class="subtitle">Hi, I'm [Your Name] - a [Your Profession]</p>
+                <p class="subtitle">Hi, I'm William (Will) Shiber</p>
                 <a href="#contact" class="cta-button">Get in Touch</a>
             </div>
         </section>
@@ -38,8 +38,9 @@
                     <p class="school-name">Johns Hopkins University</p>
                     <p class="education-date">20201- 2025</p>
                     <ul class="education-details">
-                        <li>Major: Your Major</li>
-                        <li>GPA: X.XX</li>
+                        <li>Major: Applied Mathematics and Statistics</li>
+                        <li>Focus: Statistical Learning, Stochastic Processes</li>
+                        <li>GPA: 3.8</li>
                     </ul>
                     <div class="relevant-courses">
                         <h4>Relevant Coursework:</h4>
@@ -102,7 +103,7 @@
             <a href="#"><i class="fab fa-linkedin"></i></a>
             <a href="#"><i class="fab fa-twitter"></i></a>
         </div>
-        <p>&copy; 2024 [Your Name]. All rights reserved.</p>
+        <p>&copy; 2024 William Shiber. All rights reserved.</p>
     </footer>
 </body>
 </html> 
