--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <!-- Introduction and Current Project Card -->
                     <div class="about-card">
                         <div class="intro-flex">
-                            <img src="Images/Headshot1.jpeg" alt="Will Shiber" class="headshot">
+                            <img src="images/Headshot1.jpeg" alt="Will Shiber" class="headshot">
                             <div class="intro-text">
                                 <h3>William (Will) Shiber</h3>
                                 <p class="subtitle">Applied Mathematics and Statistics Student</p>
@@ -57,7 +57,7 @@
                     <div class="about-card">
                         <div class="education-header">
                             <h3>Education</h3>
-                            <img src="Images/Johns-Hopkins-University-Symbol.png" alt="JHU Logo" class="university-logo">
+                            <img src="images/Johns-Hopkins-University-Symbol.png" alt="JHU Logo" class="university-logo">
                         </div>
                         <!-- First Degree -->
                         <div class="education-entry">
