--- a/index.html
+++ b/index.html
@@ -199,8 +199,8 @@
                             <div class="tech-stack">
                                 <span class="tech-tag">Python</span>
                                 <span class="tech-tag">Jupyter Notebook</span>
-                                <span class="tech-tag">Communication</span>
                                 <span class="tech-tag">Management</span>
+                                <span class="tech-tag">Teaching</span>
                             </div>
                         </div>
                     </div>
@@ -240,7 +240,7 @@
                         <i class="fab fa-linkedin"></i>
                         LinkedIn
                     </a>
-                    <a href="https://github.com/wjshiber" target="_blank" class="contact-link">
+                    <a href="https://github.com/wmjs" target="_blank" class="contact-link">
                         <i class="fab fa-github"></i>
                         GitHub
                     </a>
