add data science proj

--- a/index.html
+++ b/index.html
@@ -117,12 +117,11 @@
                     </div>
                 </div>
                 <div class="project-card">
-                    <div class="project-image"></div>
-                    <h3>Project 2</h3>
-                    <p>Project description goes here</p>
+                    <div class="project-image" style="background-image: url('images/chalkboard.jpg');"></div>
+                    <h3>Data Science Course Materials</h3>
+                    <p>Recitation slides, exams, homework, and other materials. No solutions are provided so that current students can't cheat :)</p>
                     <div class="project-links">
-                        <a href="#" class="project-link"><i class="fab fa-github"></i> View Code</a>
-                        <a href="#" class="project-link"><i class="fas fa-external-link-alt"></i> Live Demo</a>
+                        <a href="https://github.com/wmjs/intro-ds-materials" class="project-link"><i class="fab fa-github"></i> View</a>
                     </div>
                 </div>
             </div>
