added nba model

--- a/index.html
+++ b/index.html
@@ -108,12 +108,12 @@
             <h2>My Projects</h2>
             <div class="project-grid">
                 <div class="project-card">
-                    <div class="project-image"></div>
-                    <h3>Project 1</h3>
-                    <p>Project description goes here</p>
+                    <div class="project-image" style="background-image: url('images/basketball.jpg');"></div>
+                    <h3>NBA Predictor</h3>
+                    <p>Neural Network to predict the outcome of NBA games.</p>
                     <div class="project-links">
-                        <a href="#" class="project-link"><i class="fab fa-github"></i> View Code</a>
-                        <a href="#" class="project-link"><i class="fas fa-external-link-alt"></i> Live Demo</a>
+                        <a href="https://github.com/wmjs/nba-predictor" class="project-link"><i class="fab fa-github"></i> View Code</a>
+                        <a href="nba_predictions.html" class="project-link"><i class="fas fa-external-link-alt"></i> Predictions</a>
                     </div>
                 </div>
                 <div class="project-card">
