added basketball image

--- a/index.html
+++ b/index.html
@@ -41,14 +41,13 @@
                         <div class="current-project">
                             <h4>Current Project</h4>
                             <div class="project-preview">
-                                <h5>Project Name</h5>
-                                <p class="project-description">Brief description of your current project and its goals. What problem are you solving?</p>
+                                <h5>NBA Predictions</h5>
+                                <p class="project-description">Creating a neural network to predict the outcome of NBA games. Next steps include integrating sportsbooks' lines and betting data, and automating the prediction process.</p>
                                 <div class="tech-stack">
                                     <span class="tech-tag">Python</span>
-                                    <span class="tech-tag">TensorFlow</span>
-                                    <span class="tech-tag">Data Science</span>
+                                    <span class="tech-tag">Pytorch</span>
                                 </div>
-                                <a href="#" class="project-link"><i class="fab fa-github"></i> View Progress</a>
+                                <a href="https://github.com/wmjs/nba-predictor" class="project-link"><i class="fab fa-github"></i> View Progress</a>
                             </div>
                         </div>
                     </div>
@@ -108,16 +107,16 @@
             <h2>My Projects</h2>
             <div class="project-grid">
                 <div class="project-card">
-                    <div class="project-image" style="background-image: url('images/basketball.jpg');"></div>
+                    <div class="project-image" style="background-image: url('images/basketball.jpeg'); background-size: cover; background-position: center; background-repeat: no-repeat;"></div>
                     <h3>NBA Predictor</h3>
-                    <p>Neural Network to predict the outcome of NBA games.</p>
+                    <p>Neural Network to predict the outcome of NBA games, very much a work in progress in terms of robustness. Next steps include integrating sportsbooks' lines and betting data, and automating the prediction process.</p>
                     <div class="project-links">
                         <a href="https://github.com/wmjs/nba-predictor" class="project-link"><i class="fab fa-github"></i> View Code</a>
                         <a href="nba_predictions.html" class="project-link"><i class="fas fa-external-link-alt"></i> Predictions</a>
                     </div>
                 </div>
                 <div class="project-card">
-                    <div class="project-image" style="background-image: url('images/chalkboard.jpg');"></div>
+                    <div class="project-image" style="background-image: url('images/chalkboard.jpg'); background-size: cover; background-position: center;"></div>
                     <h3>Data Science Course Materials</h3>
                     <p>I developed these materials as Head TA for Intro to Data Science (EN.553.636/436) at Johns Hopkins University. Some iterate on previous years' materials, others were created from scratch. Includes recitation slides, exams, homework, and other materials. No solutions are provided so that current students can't cheat :)</p>
                     <div class="project-links">
