added project card

--- a/index.html
+++ b/index.html
@@ -123,6 +123,15 @@
                         <a href="https://github.com/wmjs/intro-ds-materials" class="project-link"><i class="fab fa-github"></i> View</a>
                     </div>
                 </div>
+                <div class="project-card">
+                    <div class="project-image" style="background-image: url('images/your-image.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat;"></div>
+                    <h3>Model Calibration Investigation</h3>
+                    <p>Work in progress. Class project investigating the generalizability of model calibration techniques across different datasets and domains. Specifically, looking into Sigmmoid, Isotonic, and Similarity-Binning Averageing (SBA) calibration techniques.</p>
+                    <div class="project-links">
+                        <!-- <a href="https://github.com/yourusername/project" class="project-link"><i class="fab fa-github"></i> View Code</a>
+                        <a href="project-demo.html" class="project-link"><i class="fas fa-external-link-alt"></i> Live Demo</a> -->
+                    </div>
+                </div>
             </div>
         </section>
 
