updated folder structure

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                     <p>Neural Network to predict the outcome of NBA games, very much a work in progress in terms of robustness. Next steps include integrating sportsbooks' lines and betting data, and automating the prediction process.</p>
                     <div class="project-links">
                         <a href="https://github.com/wmjs/nba-predictor" class="project-link"><i class="fab fa-github"></i> View Code</a>
-                        <a href="nba_predictions.html" class="project-link"><i class="fas fa-external-link-alt"></i> Predictions</a>
+                        <a href="nba_page/nba_predictions.html" class="project-link"><i class="fas fa-external-link-alt"></i> Predictions</a>
                     </div>
                 </div>
                 <div class="project-card">
