--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                             <img src="images/Headshot1.jpeg" alt="Will Shiber" class="headshot">
                             <div class="intro-text">
                                 <h3>William (Will) Shiber</h3>
-                                <p class="subtitle">Applied Mathematics and Statistics Student</p>
+                                <p class="subtitle">Applied Mathematics and Statistics Graduate Student</p>
                                 <p class="school-name">Johns Hopkins University</p>
                             </div>
                         </div>
