added prediction link to current project

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                                     <span class="tech-tag">Pytorch</span>
                                 </div>
                                 <a href="https://github.com/wmjs/nba-predictor" class="project-link"><i class="fab fa-github"></i> View Progress</a>
+                                <a href="nba_page/nba_predictions.html" class="project-link"><i class="fas fa-external-link-alt"></i> Predictions</a>
                             </div>
                         </div>
                     </div>
