--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                             <div class="intro-text">
                                 <h3>William (Will) Shiber</h3>
                                 <p class="subtitle">Applied Mathematics and Statistics Graduate Student</p>
-                                <p class="school-name">Johns Hopkins University</p>
+                                <!-- <p class="institution-name">awesome!</p>     -->
                             </div>
                         </div>
                         
@@ -262,7 +262,7 @@
             <a href="https://github.com/wjshiber" target="_blank"><i class="fab fa-github"></i></a>
             <a href="https://www.linkedin.com/in/william-shiber" target="https://www.linkedin.com/in/william-shiber"><i class="fab fa-linkedin"></i></a>
         </div> -->
-        <p>&copy; 2024 William Shiber - A chill dude.</p>
+        <p>Will Shiber</p>
     </footer>
 </body>
 </html> 
