--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 <div class="project-card">
                     <div class="project-image" style="background-image: url('images/basketball.jpeg'); background-size: cover; background-position: center; background-repeat: no-repeat;"></div>
                     <h3>NBA Predictor</h3>
-                    <p>Neural Network to predict the outcome of NBA games, very much a work in progress in terms of robustness. Next steps include integrating sportsbooks' lines and betting data, and automating the prediction process.</p>
+                    <p>Neural Network to predict the outcome of NBA games. Predicts game winners and point spreads. Next steps include integrating sportsbooks' lines and betting data, and automating the prediction process.</p>
                     <div class="project-links">
                         <a href="https://github.com/wmjs/nba-predictor" class="project-link"><i class="fab fa-github"></i> View Code</a>
                         <a href="nba_page/nba_predictions.html" class="project-link"><i class="fas fa-external-link-alt"></i> Predictions</a>
