--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 <div class="project-card">
                     <div class="project-image" style="background-image: url('images/basketball.jpeg'); background-size: cover; background-position: center; background-repeat: no-repeat;"></div>
                     <h3>NBA Predictor</h3>
-                    <p>Neural Network to predict the outcome of NBA games. Predicts game winners and point spreads. Next steps include integrating sportsbooks' lines and betting data, and automating the prediction process.</p>
+                    <p>Neural Network to predict the outcome of NBA games. Predicts game winners and point spreads. Next steps include integrating sportsbooks' lines and betting data and automating the prediction process.</p>
                     <div class="project-links">
                         <a href="https://github.com/wmjs/nba-predictor" class="project-link"><i class="fab fa-github"></i> View Code</a>
                         <a href="nba_page/nba_predictions.html" class="project-link"><i class="fas fa-external-link-alt"></i> Predictions</a>
@@ -131,7 +131,7 @@
                 <div class="project-card">
                     <div class="project-image" style="background-image: url('images/your-image.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat;"></div>
                     <h3>Model Calibration Investigation</h3>
-                    <p>Work in progress. Class project investigating the generalizability of model calibration techniques across different datasets and domains. Specifically, looking into Sigmmoid, Isotonic, and Similarity-Binning Averageing (SBA) calibration techniques.</p>
+                    <p>Work in progress. Class project investigating the generalizability of model calibration techniques across different datasets and domains. Specifically, looking into sigmmoid, isotonic, and similarity-binning averaging (SBA) calibration techniques applied to zeroshot image classification.</p>
                     <div class="project-links">
                         <!-- <a href="https://github.com/yourusername/project" class="project-link"><i class="fab fa-github"></i> View Code</a>
                         <a href="project-demo.html" class="project-link"><i class="fas fa-external-link-alt"></i> Live Demo</a> -->
