--- a/nba_page/nba_predictions.html
+++ b/nba_page/nba_predictions.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NBA Predictions - Will Shiber</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+    <link rel="manifest" href="favicon/site.webmanifest">
     <link rel="stylesheet" href="../styles.css">
     <link rel="stylesheet" href="nba_predictions.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -36,9 +40,9 @@
                             <tr>
                                 <th>Date</th>
                                 <th>Away Team</th>
-                                <th>Away Score</th>
+                                <th>Predicted Away Score</th>
                                 <th>Home Team</th>
-                                <th>Home Score</th>
+                                <th>Predicted Home Score</th>
                                 <th>Predicted Winner</th>
                                 <th>Predicted Win Margin</th>
                             </tr>
