--- a/nba_page/nba_predictions.html
+++ b/nba_page/nba_predictions.html
@@ -58,7 +58,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 William Shiber - A chill dude.</p>
+        <p>William Shiber</p>
     </footer>
 
     <script>
